fixing techstack component alignment in mobile moview and desktop v4

--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,7 @@ img {
   padding-right: 24px;
 }
 
-@media (width >= 45.875em) {
+@media (width >= 47em) {
   .container {
     max-width: 900px;
   }
